js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromBlockWithCrossModuleInliner/lib1/l1a.2.kt
fun foo() {
    fooX = 2
}
